feat(rest): users endpoint
